--- a/src/main/resources/templates/evento/cadastroEvento.html
+++ b/src/main/resources/templates/evento/cadastroEvento.html
@@ -15,23 +15,8 @@
 
 
 	<header>
-		<nav class="grey">
-			<div class="nav-wrapper">
-				<a href="#" class="brand-logo center">EventoApp</a>
-				<ul id="nav-mobile" class="left hide-on-med-and-down">
-					<li><a href="/cadastrarEvento"
-						class="waves-effect waves-light btn">Novo Evento</a></li>
-				</ul>
-				<ul id="nav-mobile" class="left hide-on-med-and-down">
-					<li><a href="/eventos"
-						class="waves-effect waves-light btn">Mostrar Eventos</a></li>
-				</ul>
-				<ul id="nav-mobile" class="right hide-on-med-and-down">
-					<li><a href="/sair" class="waves-effect waves-light btn">Sair</a></li>
-				</ul>
+	<div th:replace="fragments/topnav.html :: navbar-default-blue"></div>
 
-			</div>
-		</nav>
 
 	</header>
 
